--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                             Copyright © 2024 Photonvolt Energy. All rights reserved.
                         </div>
                         <div class="brinit col-md-6 text-md-end text-center">Website Designed By
-                            <a href="https://brinit.in/" target="_blank">Brin'IT</a>
+                            <a href="#" target="_blank">PRception</a>
                         </div>
                     </div>
                 </div>
@@ -504,4 +504,5 @@
 
 
 </html>
+
 
