--- a/OnGrid Solar.html
+++ b/OnGrid Solar.html
@@ -268,7 +268,7 @@
                             Copyright © 2024 Photonvolt Energy. All rights reserved.
                         </div>
                         <div class="brinit col-md-6 text-md-end text-center">Website Designed By
-                            <a href="https://brinit.in/" target="_blank">Brin'IT</a>
+                            <a href="#" target="_blank">PRception</a>
                         </div>
                     </div>
                 </div>
@@ -298,5 +298,6 @@
     <script src="assets/js/script.js"></script>
     <script src="assets/js/transition.js"></script>
 </body>
+
 
 </html>
